--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "~ngx-bootstrap/datepicker/bs-datepicker";
+
+$white-color: #fffefe;
+$gray-color: #f0f0f0;
+$primary-color: #35a400;
+$accent-color: #ff6332;
+$text-color: #001207;
+$gray-color-shadow: #818181;
+
+$border-dark: rgba($gray-color-shadow, 0.25);
+
+.main-header {
+  border-radius: 1rem;
+  box-shadow: 0px 7px 10px $border-dark;
+}
+
+.main-header ul,
+.main-header li > a {
+  color: $text-color !important;
+}
+
+.main-brand {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: $accent-color !important;
+}
