--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,12 @@ $gray-color-shadow: #818181;
 
 $border-dark: rgba($gray-color-shadow, 0.25);
 
-.main-header {
+html, body {
+  height: 100% !important;
+}
+
+.main-header,
+.main-items {
   border-radius: 1rem;
   box-shadow: 0px 7px 10px $border-dark;
 }
