--- a/src/app/pages/dashboard/main/main.component.html
+++ b/src/app/pages/dashboard/main/main.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid vh-100">
-  <div class="row">
-    <div class="col">1</div>
+<div class="container-fluid body h-100 w-100">
+  <div class="row h-100">
+    <div class="col h-100">1</div>
     <div class="col-4">
       <app-suggestion></app-suggestion>
     </div>
