--- a/src/app/pages/dashboard/main/suggestion/suggestion.component.html
+++ b/src/app/pages/dashboard/main/suggestion/suggestion.component.html
@@ -1,9 +1,13 @@
-<div class="container-fluid vh-100">
-  <div class="row">
+
+  <div class="row h-100">
     <div class="col">
-      <div class="main-items">
-        test
+      <div class="main-items h-100">
+        <div class="d-flex justify-content-center pt-5 pb-3">
+          <h3>Prelažemo Danas</h3>
+        </div>
+        <div class="d-flex justify-content-center pt-3 pb-3">
+          <app-suggestion-item class="suggestion"></app-suggestion-item>
+        </div>
       </div>
     </div>
   </div>
-</div>
