--- a/src/app/pages/dashboard/main/suggestion/suggestion-item/suggestion-item.component.html
+++ b/src/app/pages/dashboard/main/suggestion/suggestion-item/suggestion-item.component.html
@@ -1,9 +1,19 @@
-<div class="row suggestion-item">
-  <div class="col-4">
-    <a href="#" alt=""></a>
+<div *ngFor="let item of list" class="row suggestion-item">
+  <div class="col-4 p-0">
+    <img src="https://periodicparalysisunited.org/wp-content/uploads/2021/02/healthy-food.jpg" class="img-thumbnail" alt="...">
   </div>
-  <div class="col">
-    <h5>Neki Dorucak</h5>
-    <h6>Super Dorucak</h6>
+  <div class="col d-flex align-items-start flex-column">
+    <div class="float-start p-2 mt-2 w-100">
+      <div class="d-flex justify-content-between">
+        <div><h6 style="text-transform: uppercase;">Dorucak</h6></div>
+        <div class="ml-auto"><h5>300 kcal</h5></div>
+      </div>
+    </div>
+    <div class="float-start p-2">
+      <h5>Super Dorucak</h5>
+    </div>
+    <div class="form-check item-checkbox mt-auto p-2">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+    </div>
   </div>
 </div>
