--- a/src/app/pages/dashboard/main/suggestion/suggestion.component.html
+++ b/src/app/pages/dashboard/main/suggestion/suggestion.component.html
@@ -3,10 +3,13 @@
     <div class="col">
       <div class="main-items h-100">
         <div class="d-flex justify-content-center pt-5 pb-3">
-          <h3>Prelažemo Danas</h3>
+          <h3>Predlažemo Danas</h3>
         </div>
         <div class="d-flex justify-content-center pt-3 pb-3">
           <app-suggestion-item class="suggestion"></app-suggestion-item>
+        </div>
+        <div class="d-flex justify-content-center pt-5 pb-3 align-self-end">
+          <button type="button" class="btn btn-success button">Izaberi</button>
         </div>
       </div>
     </div>
