--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ $primary-color: #35a400;
 $accent-color: #ff6332;
 $text-color: #001207;
 $gray-color-shadow: #818181;
+$background-1: #FAFAFA;
 
 $border-dark: rgba($gray-color-shadow, 0.25);
 
@@ -57,6 +58,47 @@ html, body {
 }
 
 .suggestion-item {
-  background-color: aqua;
+  background-color: $background-1;
   min-height: 125px;
+  margin-bottom: 1rem;
+}
+
+.suggestion-item img {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  max-height: 250px;
+  margin-bottom: 1rem;
+  height: 100%;
+  padding: 0;
+  border: 0;
+  border-radius: 1rem 0 0 1rem ;
+}
+
+.item-checkbox {
+  width: 100%;
+  text-align: end;
+}
+
+.item-checkbox input {
+  float: none !important;
+  margin: 0 !important;
+  border-radius: 1rem !important;
+  width: 26px;
+  height: 26px;
+}
+
+.button {
+  color: $white-color;
+  background-color: $primary-color;
+  border-color: $primary-color;
+  border-radius: 2rem;
+  box-shadow: 0px 7px 10px $border-dark;
+  width: 15rem;
+  height: 3rem;
+  line-height: 3rem;
+  font-size: 1.3rem;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
