--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,9 @@ html, body {
 
 .main-header,
 .main-items,
+.main-user-suggestion,
+.bar-graph-section,
+.pie-graph-section,
 .suggestion-item {
   border-radius: 1rem;
   box-shadow: 0px 7px 10px $border-dark;
@@ -102,3 +105,26 @@ html, body {
   padding: 0;
   margin: 0;
 }
+
+.main-user-suggestion h6 + p{
+  margin-bottom: 8px !important;
+}
+
+.main-screen-button {
+  border-radius: 50%;
+  background-color: $primary-color;
+}
+
+.todays-meals {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+// .bar-graph-section {
+//   margin-left: 0.5rem;
+// }
+
+// .pie-graph-section {
+//   margin-right: 0.5rem;
+// }
