--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Recepti</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Moji Recepti</a>
+        </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
