--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,13 +15,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Početna</a>
+          <a class="nav-link active" aria-current="page" routerLink="" routerLinkActive="active">Početna</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Recepti</a>
+          <a class="nav-link" routerLink="/receipts/all" routerLinkActive="active">Recepti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Moji Recepti</a>
+          <a class="nav-link" routerLink="/meals" routerLinkActive="active">Moji Obroci</a>
         </li>
         <li class="nav-item dropdown">
           <a
