--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,9 +32,11 @@ html, body {
 .main-user-suggestion,
 .bar-graph-section,
 .pie-graph-section,
-.suggestion-item {
+.suggestion-item,
+.my-card {
   border-radius: 1rem;
   box-shadow: 0px 7px 10px $border-dark;
+  border: 0;
 }
 
 .main-header ul,
@@ -123,8 +125,21 @@ html, body {
   border-radius: 3rem;
 }
 
+.main-user-suggestion {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .main-user-suggestion h6 + p{
   margin-bottom: 8px !important;
+}
+
+.main-user-suggestion blockquote {
+  footer {
+    align-self: flex-end;
+  }
 }
 
 .main-screen-button {
@@ -161,6 +176,22 @@ html, body {
   font-size: 1.1rem;
   font-weight: 400;
   color: $primary-color;
+}
+
+.accent-text {
+  color: $primary-color;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.like-button {
+  background-color: $background-1;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 2.5rem;
+  margin-left: 0.5rem;
+  margin-top: 0.5rem;
+  position: absolute;
 }
 
 // .bar-graph-section {
