--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <app-header class="header"></app-header>
+  <app-header *ngIf="isLoggedIn" class="header"></app-header>
   <router-outlet></router-outlet>
 </body>
 </html>
