--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,9 @@ $main-font: 'Poppins', sans-serif;
 $white-color: #fffefe;
 $gray-color: #f0f0f0;
 $primary-color: #35a400;
+$primary-color-link: #2b8800;
 $accent-color: #ff6332;
+$accent-color-link: #c44c27;
 $text-color: #001207;
 $gray-color-shadow: #818181;
 $background-1: #FAFAFA;
@@ -33,7 +35,8 @@ html, body {
 .bar-graph-section,
 .pie-graph-section,
 .suggestion-item,
-.my-card {
+.my-card,
+.login-form input {
   border-radius: 1rem;
   box-shadow: 0px 7px 10px $border-dark;
   border: 0;
@@ -58,6 +61,26 @@ html, body {
 .body {
   padding-top: 70px;
   padding-bottom: 12px;
+}
+
+/* unvisited link */
+a:link {
+  color: $primary-color;
+}
+
+/* visited link */
+a:visited {
+  color: $primary-color-link;
+}
+
+/* mouse over link */
+a:hover {
+  color: $accent-color-link;
+}
+
+/* selected link */
+a:active {
+  color: $accent-color;
 }
 
 .main-items .row {
@@ -192,6 +215,46 @@ html, body {
   margin-left: 0.5rem;
   margin-top: 0.5rem;
   position: absolute;
+}
+
+::marker {
+  color: $primary-color;
+  font-size: 1.2em;
+}
+
+.login-form input {
+  border-radius: 3rem;
+}
+
+.login-form label {
+  padding-left: 1rem;
+  padding-bottom: 0;
+  margin: 0;
+  opacity: 0.7
+}
+
+input,
+input::-webkit-input-placeholder {
+  opacity: 0.7 !important;
+  font-size: 0.95rem !important;
+  line-height: 2.5 !important;
+}
+
+input[type="password"]::-webkit-input-placeholder {
+  font-size: 0.8rem !important;
+}
+
+input[type="password"] {
+  font-family: Verdana;
+  letter-spacing: 0.125em;
+}
+
+input:active {
+  border: none !important;
+}
+
+.form-control:focus {
+  box-shadow: 0 0 0 0.2rem  rgba($primary-color, 0.3);;
 }
 
 // .bar-graph-section {
