--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,10 +17,11 @@ $gray-color: #f0f0f0;
 $primary-color: #35a400;
 $primary-color-link: #2b8800;
 $accent-color: #ff6332;
-$accent-color-link: #c44c27;
+$accent-color-link: #157347;
 $text-color: #001207;
 $gray-color-shadow: #818181;
 $background-1: #FAFAFA;
+$danger-color: #ff3232;
 
 $border-dark: rgba($gray-color-shadow, 0.25);
 
@@ -36,10 +37,11 @@ html, body {
 .pie-graph-section,
 .suggestion-item,
 .my-card,
-.login-form input {
-  border-radius: 1rem;
-  box-shadow: 0px 7px 10px $border-dark;
-  border: 0;
+.login-form input,
+.login-form select {
+  border-radius: 1rem !important;
+  box-shadow: 0px 7px 10px $border-dark !important;
+  border: 0 !important;
 }
 
 .main-header ul,
@@ -233,8 +235,14 @@ a:active {
   opacity: 0.7
 }
 
+.login-form .form-control {
+  color: $text-color;
+  font-weight: 500;
+}
+
 input,
-input::-webkit-input-placeholder {
+input::-webkit-input-placeholder,
+select {
   opacity: 0.7 !important;
   font-size: 0.95rem !important;
   line-height: 2.5 !important;
@@ -253,8 +261,22 @@ input:active {
   border: none !important;
 }
 
+select {
+  min-height: calc(1.5em + 1rem + 2px) !important;
+  padding: 0.5rem 1rem !important;
+}
+
+// .form-control:invalid {
+//   box-shadow: 0 0 0 0.2rem rgba($danger-color, 0.3);
+// }
+
 .form-control:focus {
-  box-shadow: 0 0 0 0.2rem  rgba($primary-color, 0.3);;
+  box-shadow: 0 0 0 0.2rem rgba($primary-color, 0.3);
+}
+
+.form-check-input:checked {
+  background-color: $primary-color;
+  border-color: $primary-color;
 }
 
 // .bar-graph-section {
