--- a/src/app/pages/profile/login/login.component.html
+++ b/src/app/pages/profile/login/login.component.html
@@ -8,21 +8,21 @@
             <h5>Da pristupš svome profilu i receptima, potrebno je da se prijaviš!</h5>
           </div>
         </div>
-        <form class="login-form pt-3">
+        <form (ngSubmit)="onSubmit()" class="login-form pt-3">
           <div class="pb-5">
             <div class="form-outline mb-4">
               <label class="form-label" for="form1Example13">Email</label>
-              <input type="email" id="form1Example13" placeholder="marinamarinkovic@mail.com" class="form-control form-control-lg" />
+              <input type="email" formcontrolname="email" required id="form1Example13" placeholder="marinamarinkovic@mail.com" class="form-control form-control-lg" />
             </div>
 
             <!-- Password input -->
             <div class="form-outline mb-4">
               <label class="form-label" for="form1Example23">Šifra</label>
-              <input type="password" id="form1Example23" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" class="form-control form-control-lg" />
+              <input type="password" formcontrolname="password" required minlength="6" id="form1Example23" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" class="form-control form-control-lg" />
             </div>
 
             <div class="d-flex flex-column align-items-end mb-4">
-              <a href="#!"><small>Zaboravili ste šifru?</small></a>
+              <a href="#" routerLinkActive="active"><small>Zaboravili ste šifru?</small></a>
             </div>
           </div>
           <!-- Email input -->
@@ -31,7 +31,7 @@
           <div class="row d-flex align-items-center justify-content-center pt-3">
             <div class="col">
               <div class="col"><p class="mb-0">Novi si ovdje?</p></div>
-              <div class="col"><a href="#!"><h4>Registruj se</h4></a></div>
+              <div class="col"><a routerLink="/register" routerLinkActive="active"><h4>Registruj se</h4></a></div>
             </div>
             <div class="col">
               <button type="submit" class="btn btn-success btn-lg btn-block button">Potvrdi</button>
