--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-/* Importing Bootstrap SCSS file. */
-@import "~bootstrap/scss/bootstrap";
+// /* Importing Bootstrap SCSS file. */
+// @import "~bootstrap/scss/bootstrap";
 
-/* Importing Datepicker SCSS file. */
-@import "~ngx-bootstrap/datepicker/bs-datepicker";
+// /* Importing Datepicker SCSS file. */
+// @import "~ngx-bootstrap/datepicker/bs-datepicker";
 
 // Google Fonts
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap);
@@ -38,7 +38,8 @@ html, body {
 .suggestion-item,
 .my-card,
 .login-form input,
-.login-form select {
+.login-form select,
+.nav-menu ul {
   border-radius: 1rem !important;
   box-shadow: 0px 7px 10px $border-dark !important;
   border: 0 !important;
@@ -46,6 +47,10 @@ html, body {
 
 .main-header ul,
 .main-header li > a {
+  color: rgba($text-color, 0.7);
+}
+
+.main-header li > a.active {
   color: $text-color !important;
 }
 
@@ -275,8 +280,24 @@ select {
 }
 
 .form-check-input:checked {
-  background-color: $primary-color;
-  border-color: $primary-color;
+  background-color: $primary-color !important;
+  border-color: $primary-color !important;
+}
+
+.form-check-input:focus {
+  box-shadow: 0 0 0 0.25rem rgba($primary-color, 0.3) !important;
+}
+
+.nav-button:focus {
+  box-shadow: none
+}
+
+.nav-link:focus,
+.nav-link:hover,
+.dropdown-item:focus,
+.dropdown-item:hover {
+  background-color: transparent !important;
+  color: $primary-color !important;
 }
 
 // .bar-graph-section {
