--- a/src/app/pages/dashboard/main/suggestion/suggestion-item/suggestion-item.component.html
+++ b/src/app/pages/dashboard/main/suggestion/suggestion-item/suggestion-item.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let item of list" class="row suggestion-item">
   <div class="col-4 p-0">
-    <img src="https://periodicparalysisunited.org/wp-content/uploads/2021/02/healthy-food.jpg" class="img-thumbnail" alt="...">
+    <img src="https://static.onecms.io/wp-content/uploads/sites/20/2022/02/11/valentines-food-deals-2.jpg" class="img-thumbnail" alt="...">
   </div>
   <div class="col d-flex align-items-start flex-column">
     <div class="float-start p-2 mt-2 w-100">
