--- a/src/app/pages/receipts/all-receipts/all-receipts.component.html
+++ b/src/app/pages/receipts/all-receipts/all-receipts.component.html
@@ -1,3 +1,10 @@
 <div class="container-fluid body h-100 w-100">
-  <p>all-receipts works!</p>
+  <div class="row h-100">
+    <div class="col h-100">
+      <app-long-card></app-long-card>
+    </div>
+    <div class="col-4">
+      <app-suggestion></app-suggestion>
+    </div>
+  </div>
 </div>
