--- a/src/app/pages/shared/components/long-card/long-card.component.html
+++ b/src/app/pages/shared/components/long-card/long-card.component.html
@@ -2,7 +2,7 @@
   <div class="col d-flex justify-content-center">
     <div class="card w-100 my-long-card">
       <div class="card-body row p-0">
-        <div class="col-3">
+        <div class="col-3 p-0">
           <img class="card-img-top" src="https://static.onecms.io/wp-content/uploads/sites/20/2022/02/11/valentines-food-deals-2.jpg" alt="Card image cap">
         </div>
         <div class="col px-4 h-100 d-flex align-items-center">
@@ -16,12 +16,10 @@
             <div class="float-start py-3 w-100">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste odit magnam voluptatem quis porro molestias fugiat consectetur excepturi, deserunt voluptas quam cumque provident cupiditate et commodi veritatis distinctio impedit. Unde.
             </div>
-            <div class="row d-flex justify-content-between w-100 h-100">
-              <div class="col-6 d-flex pb-3 align-self-end">
-                test
-              </div>
-              <div class="col-6 d-flex mt-auto pb-3 align-self-end">
-                <button type="button" class="btn btn-success button">Izaberi</button>
+            <div class="float-start w-100 mt-auto pb-3">
+              <div class="d-flex justify-content-between">
+                <div><p>1000 kcal</p></div>
+                <button type="button" class="btn btn-success button ">Izaberi</button>
               </div>
             </div>
           </div>
