--- a/src/app/pages/receipts/receipt/receipt.component.html
+++ b/src/app/pages/receipts/receipt/receipt.component.html
@@ -9,7 +9,7 @@
         <h2>Kajgana sa slaninom</h2>
       </div>
       <div class="d-flex align-content-start flex-wrap receipt-image pt-3">
-        <img src="https://periodicparalysisunited.org/wp-content/uploads/2021/02/healthy-food.jpg" class="img-thumbnail" alt="...">
+        <img src="https://static.onecms.io/wp-content/uploads/sites/20/2022/02/11/valentines-food-deals-2.jpg" class="img-thumbnail" alt="...">
       </div>
       <div class="pt-3">
         <h3>Koraci</h3>
